@@ -1,5 +1,15 @@
 2007-03-15  Jakub Jelinek  <jakub@redhat.com>
 
+	[BZ #4101]
+	* argp/argp-help.c (hol_cluster_cmp): Fix comparisons used to find
+	ancestors with the same depths.
+	Patch by Niels Moeller <nisse@lysator.liu.se>.
+	(filter_doc): Don't crash if argp is NULL.
+	* argp/Makefile (tests): Add tst-argp2.
+	* argp/tst-argp2.c: New test.
+
+2007-03-15  Jakub Jelinek  <jakub@redhat.com>
+
 	[BZ #3919]
 	* math/libm-test.inc (log_test): Test -Inf and NaN.
 	(log10_test, log1p_test, log2_test): Test -Inf.
